<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- auth -->
    <string name="google_login">구글 로그인</string>
    <string name="naver_login">네이버 로그인</string>
    <string name="kakao_login">카카오 로그인</string>

    <!-- 권한 -->
    <string name="permission_title">원활한 운다방 사용을 위한\n접근 권한 안내</string>
    <string name="location_title">위치 정보</string>
    <string name="location_desc">근처 운동 메이트 검색</string>
    <string name="notify_title">알림</string>
    <string name="notify_desc">매칭 알림</string>
    <string name="gallery_title">갤러리</string>
    <string name="gallery_desc">운동 기록 시 갤러리 내 사진 사용</string>

    <!-- 약관 동의 -->
    <string name="terms_title">환영합니다!\n아래의 약관에 동의해주세요</string>
    <string name="terms_required_service">(필수) 이용약관</string>
    <string name="terms_required_privacy">(필수) 개인정보수집이용동의</string>
    <string name="terms_required_location">(선택) 위치 기반 서비스 이용약관</string>
    <string name="terms_required_notify">(선택) 알림 동의</string>

    <!-- 회원가입 -->
    <string name="register_title">회원가입을 위해\n프로필 정보를 입력해주세요</string>
    <string name="register_nickname_rule">•&#160;&#160;영어, 한글, 숫자 포함 30자 이내\n•&#160;&#160;태그, 이모지 및 특수 문자 불가능</string>
    <string name="male">남</string>
    <string name="female">여</string>
    <string name="hidden">공개 안함</string>
    <string name="birth_default">YYYY / MM / DD</string>
    <string name="error_nickname_duplicated">이미 사용 중인 닉네임입니다.</string>
    <string name="error_nickname_invalid">닉네임 조건을 확인해주세요.</string>
    <string name="error_form_incomplete">생일과 성별을 모두 선택해주세요.</string>
    <string name="error_unknown">알 수 없는 오류가 발생했습니다.</string>
    <string name="register_success">회원가입 성공!</string>

    <!-- 에러 -->
    <string name="login_failed">로그인에 실패했습니다.</string>
    <string name="login_canceled">로그인이 취소되었습니다.</string>
    <string name="account_merged">기존의 계정과 통합되었습니다. 다시 로그인해주세요.</string>
    <string name="login_response_empty">로그인 응답이 없습니다.</string>
    <string name="login_user_canceled">로그인 사용자 취소</string>
    <string name="login_failed_with_error">authorizationLauncher 로그인에 실패했습니다.: %s</string>
    <string name="login_success_with_token">로그인 성공: %s</string>
    <string name="login_error_with_description">onError 로그인 실패: %s</string>
    <string name="server_address_incorrect">서버 주소가 틀렸거나, 통신이 불가능합니다.</string>
    <string name="fcm_token_send_success">fcm 토큰 저장 성공</string>
    <string name="fcm_token_not_found">저장된 FCM 토큰이 없습니다.</string>
</resources>