<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/permission_title_tv"
        style="@style/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="114dp"
        android:text="@string/permission_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/location_imv"
        android:src="@drawable/ic_permission_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="77dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/permission_title_tv"/>

    <TextView
        android:id="@+id/location_title_tv"
        style="@style/content_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_title"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toTopOf="@id/location_imv"
        app:layout_constraintStart_toEndOf="@+id/location_imv"
        app:layout_constraintBottom_toTopOf="@id/location_desc_tv"/>

    <TextView
        android:id="@+id/location_desc_tv"
        style="@style/subtext_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_desc"
        android:textColor="@color/gray200"
        app:layout_constraintBottom_toBottomOf="@+id/location_imv"
        app:layout_constraintStart_toStartOf="@+id/location_title_tv"
        app:layout_constraintTop_toBottomOf="@id/location_title_tv" />

    <ImageView
        android:id="@+id/notify_imv"
        android:src="@drawable/ic_permission_notify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_imv"/>

    <TextView
        android:id="@+id/notify_title_tv"
        style="@style/content_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notify_title"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toTopOf="@id/notify_imv"
        app:layout_constraintStart_toEndOf="@+id/notify_imv"
        app:layout_constraintBottom_toTopOf="@id/notify_desc_tv"/>

    <TextView
        android:id="@+id/notify_desc_tv"
        style="@style/subtext_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notify_desc"
        android:textColor="@color/gray200"
        app:layout_constraintBottom_toBottomOf="@+id/notify_imv"
        app:layout_constraintStart_toStartOf="@+id/notify_title_tv"
        app:layout_constraintTop_toBottomOf="@id/notify_title_tv" />

    <ImageView
        android:id="@+id/gallery_imv"
        android:src="@drawable/ic_permission_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notify_imv"/>

    <TextView
        android:id="@+id/gallery_title_tv"
        style="@style/content_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery_title"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toTopOf="@id/gallery_imv"
        app:layout_constraintStart_toEndOf="@+id/gallery_imv"
        app:layout_constraintBottom_toTopOf="@id/gallery_desc_tv"/>

    <TextView
        android:id="@+id/gallery_desc_tv"
        style="@style/subtext_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery_desc"
        android:textColor="@color/gray200"
        app:layout_constraintBottom_toBottomOf="@+id/gallery_imv"
        app:layout_constraintStart_toStartOf="@+id/gallery_title_tv"
        app:layout_constraintTop_toBottomOf="@id/gallery_title_tv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/permission_next_btn"
        style="@style/content_bold"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:background="@drawable/basic_activate_btn"
        android:gravity="center"
        android:stateListAnimator="@null"
        android:text="@string/confirm"
        android:textColor="@color/white300"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>