<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/_title_tv"
        style="@style/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="114dp"
        android:layout_weight="1"
        android:text="@string/terms_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/terms_service_cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/permission_next_btn">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/subtext_14"
            android:layout_gravity="center"
            android:textColor="@color/dark_gray"
            android:text="@string/terms_required_service"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:drawablePadding="4dp"/>
        <ImageView
            android:id="@+id/service_btn_imv"
            android:src="@drawable/selector_terms_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/terms_privacy_cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/permission_next_btn">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/subtext_14"
            android:layout_gravity="center"
            android:textColor="@color/dark_gray"
            android:text="@string/terms_required_privacy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:drawablePadding="4dp"/>
        <ImageView
            android:id="@+id/privacy_btn_imv"
            android:src="@drawable/selector_terms_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/terms_location_cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/permission_next_btn">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/subtext_14"
            android:layout_gravity="center"
            android:textColor="@color/dark_gray"
            android:text="@string/terms_required_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:drawablePadding="4dp"/>
        <ImageView
            android:id="@+id/location_btn_imv"
            android:src="@drawable/selector_terms_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/terms_notify_cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:layout_marginBottom="80dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/permission_next_btn">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/subtext_14"
            android:layout_gravity="center"
            android:textColor="@color/dark_gray"
            android:text="@string/terms_required_notify"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
        <ImageView
            android:id="@+id/notify_btn_imv"
            android:src="@drawable/selector_terms_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/terms_next_btn"
        style="@style/content_bold"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:background="@drawable/selector_basic_btn"
        android:gravity="center"
        android:stateListAnimator="@null"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent" />
</LinearLayout>