<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    tools:context="com.project200.presentation.auth.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="80dp"
        android:background="@color/main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        style="@style/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/kakao_login_btn"
        style="@style/content_bold"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/basic_activate_btn"
        android:backgroundTint="@color/kakao_yellow"
        android:gravity="center"
        android:stateListAnimator="@null"
        android:text="@string/kakao_login"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/naver_login_btn" />
    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="25dp"
        android:src="@drawable/ic_login_kakao"
        app:layout_constraintStart_toStartOf="@id/kakao_login_btn"
        app:layout_constraintTop_toTopOf="@id/kakao_login_btn"
        app:layout_constraintBottom_toBottomOf="@id/kakao_login_btn"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/naver_login_btn"
        style="@style/content_bold"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/basic_activate_btn"
        android:backgroundTint="@color/naver_green"
        android:gravity="center"
        android:textColor="@color/white"
        android:stateListAnimator="@null"
        android:text="@string/naver_login"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/google_login_btn" />

    <ImageView
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="21dp"
        android:src="@drawable/ic_login_naver"
        app:layout_constraintStart_toStartOf="@id/naver_login_btn"
        app:layout_constraintTop_toTopOf="@id/naver_login_btn"
        app:layout_constraintBottom_toBottomOf="@id/naver_login_btn"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/google_login_btn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginBottom="80dp"
        android:stateListAnimator="@null"
        android:text="@string/google_login"
        android:gravity="center"
        style="@style/content_bold"
        android:background="@drawable/google_login_border"
        app:layout_constraintBottom_toBottomOf="parent" />
    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="25dp"
        android:src="@drawable/ic_login_google"
        app:layout_constraintStart_toStartOf="@id/google_login_btn"
        app:layout_constraintTop_toTopOf="@id/google_login_btn"
        app:layout_constraintBottom_toBottomOf="@id/google_login_btn"/>
</androidx.constraintlayout.widget.ConstraintLayout>